--- a/.gitignore
+++ b/.gitignore
@@ -468,3 +468,24 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+# Laravel 10.0
+/.phpunit.cache
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.env.production
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
+npm-debug.log
+yarn-error.log
+/.fleet
+/.idea
+/.vscode
+
