--- a/package.json
+++ b/package.json
@@ -6,17 +6,29 @@
         "build": "vite build && vite build --ssr"
     },
     "devDependencies": {
-        "@inertiajs/vue3": "^1.0.0",
+        "@headlessui/react": "^1.7.11",
+        "@inertiajs/core": "^1.0.2",
+        "@inertiajs/react": "^1.0.2",
         "@tailwindcss/forms": "^0.5.2",
         "@tailwindcss/typography": "^0.5.2",
-        "@vitejs/plugin-vue": "^4.0.0",
-        "@vue/server-renderer": "^3.2.31",
+        "@types/lodash": "^4.14.181",
+        "@types/react": "^18.0.25",
+        "@types/react-dom": "^18.0.8",
+        "@types/ziggy-js": "^1.3.0",
+        "@vitejs/plugin-react": "^2.2.0",
         "autoprefixer": "^10.4.7",
         "axios": "^1.1.2",
+        "classnames": "^2.3.1",
         "laravel-vite-plugin": "^0.8.0",
+        "lodash": "^4.17.21",
         "postcss": "^8.4.14",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "tailwindcss": "^3.1.0",
-        "vite": "^4.0.0",
-        "vue": "^3.2.31"
+        "ts-node": "^10.2.1",
+        "tslib": "^2.3.1",
+        "typescript": "^4.4.3",
+        "vite": "^3.0.0",
+        "ziggy-js": "^1.4.5"
     }
 }
