--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build && vite build --ssr"
+        "build": "tsc && vite build && vite build --ssr && vite build && vite build --ssr --ssr"
     },
     "devDependencies": {
         "@headlessui/react": "^1.7.11",
