--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,27 @@
         "target": "esnext",
         "module": "esnext",
         "moduleResolution": "node",
-        "jsx": "react",
+        "jsx": "react-jsx",
         "rootDir": "./resources/js",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
+        "isolatedModules": true,
+        "noEmit": true,
         "forceConsistentCasingInFileNames": true,
         "paths": {
             "@/*": ["./resources/js/*"]
         },
+
         "types": ["vite/client"]
-    }
+    },
+    "include": [
+        "resources/js/**/*.ts",
+        "resources/js/**/*.tsx",
+        "resources/js/**/*.d.ts"
+    ],
+    "exclude": [
+        "node_modules",
+        "**/*.spec.ts"
+    ],
 }
