--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.0.8",
         "@types/ziggy-js": "^1.3.0",
+        "@typescript-eslint/eslint-plugin": "^6.7.3",
+        "@typescript-eslint/parser": "^6.7.3",
         "@vitejs/plugin-react": "^2.2.0",
         "autoprefixer": "^10.4.7",
         "axios": "^1.1.2",
         "classnames": "^2.3.1",
+        "eslint": "^8.50.0",
         "laravel-vite-plugin": "^0.8.0",
         "lodash": "^4.17.21",
         "postcss": "^8.4.14",
@@ -27,7 +30,7 @@
         "tailwindcss": "^3.1.0",
         "ts-node": "^10.2.1",
         "tslib": "^2.3.1",
-        "typescript": "^4.4.3",
+        "typescript": "^4.9.5",
         "vite": "^3.0.0",
         "ziggy-js": "^1.4.5"
     }
