--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "axios": "^1.1.2",
         "classnames": "^2.3.1",
         "eslint": "^8.50.0",
+        "eslint-plugin-react": "^7.33.2",
         "laravel-vite-plugin": "^0.8.0",
         "lodash": "^4.17.21",
         "postcss": "^8.4.14",
