--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build && vite build --ssr && vite build && vite build"
+        "build": "tsc && vite build && vite build --ssr && vite build && vite build",
+        "lint": "eslint --fix --ext .ts,.tsx ./resources/js"
     },
     "devDependencies": {
         "@headlessui/react": "^1.7.11",
