--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build && vite build --ssr && vite build && vite build",
-        "lint": "eslint --fix --ext .ts,.tsx ./resources/js"
+        "lint": "eslint --ext .ts,.tsx ./resources/js",
+        "lint:fix": "eslint --fix --ext .ts,.tsx ./resources/js && prettier --write ."
     },
     "devDependencies": {
         "@headlessui/react": "^1.7.11",
@@ -23,6 +24,8 @@
         "axios": "^1.1.2",
         "classnames": "^2.3.1",
         "eslint": "^8.50.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.0",
         "eslint-plugin-react": "^7.33.2",
         "laravel-vite-plugin": "^0.8.0",
         "lodash": "^4.17.21",
